# fly-in

./: .gitignore  Makefile  README.md  pyproject.toml
maps/easy/: 01_linear_path.txt
maps/hard/: 03_ultimate_challenge.txt
src/: __main__.py  exceptions.py
src/display/: camera.py  display.py  drone.py
src/exceptions/: __init__.py  exceptions.py
src/models/: connection.py  connection_metadata.py  hub.py  hub_metadata.py  map_config.py
src/models/map_models/: __init__.py  map_config.py
src/navigation/: a_star_node.py  drone.py  router.py  simulation_engine.py
src/parser/: __init__.py  parser.py  parser_utils.py
src/parser/models/: connection.py  connection_metadata.py  hub.py  hub_metadata.py  map_config.py
src/router/: router.py
tests/: test_parser.py
tests/maps/invalids/: connection_name_space.txt  connection_name_space_2.txt  connection_name_with_more_character.txt  connection_with_empty_metadata.txt  connection_wrong_key.txt  double_end_hub.txt  double_start_hub.txt  end_hub_blocked.txt  hub_color_no_alpha_in_color.txt  hub_multiple_words_color.txt  isolated_end.txt  isolated_hub.txt  isolated_start.txt  nb_drones_char.txt  nb_drones_double_:.txt  nb_drones_not_first.txt  nb_drones_not_stripped.txt  negative_nb_drones.txt  same_coordinates.txt  same_name_hub.txt  start_hub_blocked.txt
tests/maps/valids/: 02_capacity_hell.txt
