[project]
name = "fly-in"
version = "0.1.0"
description = "This project consists in designing an efficient drone routing system that navigates multiple drones through connected zones while minimizing simulation turns and handling movement constraints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
]

[tool.mypy]
exclude = [
    '^\\.venv/',
    '^\\.git/',
]
